--- a/metadata.yml
+++ b/metadata.yml
@@ -7,3 +7,4 @@ icon:
   file: assets/icon.png
 version: v1.0.0
 category: game # game, demo, utility, ...
+url: https://github.com/lummi01/32blit-SnakeRace
